Metodo listar usuario e insertar usuario funcionando